--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "angularfire": "^v1.1.1",
-    "angular-chart.js": "^0.7.2"
+    "angular-chart.js": "^0.7.2",
+    "angular-moment" : "^0.10.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
