--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-touch": "^1.3.0",
     "angularfire": "^v1.1.1",
     "angular-chart.js": "^0.7.2",
-    "angular-moment" : "^0.10.1"
+    "angular-moment" : "^0.10.1",
+    "bootstrap" : "^3.3.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
