master  >  Add globals to jshint

--- a/.jshintrc
+++ b/.jshintrc
@@ -18,6 +18,8 @@
   "trailing": true,
   "smarttabs": true,
   "globals": {
+    "Firebase": false,
+    "moment": false,
     "angular": false
   }
 }
